<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/barcodeScannerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.ShoppingScanner.FullscreenContainer"
    tools:context=".BarcodeScannerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/productdetail"
            android:orientation="horizontal">

        </ImageView>

        <LinearLayout
            android:id="@+id/productdetail"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/cameraPreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/product"
                    android:hint="Ürün: Nestle Çilekli Çikolata"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding = "5dp"
                    android:layout_marginStart="5dp"
                   >

                </TextView>

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text= "@string/Price"
                    android:hint="Fiyat: 15.99 ₺"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding = "5dp"
                    android:layout_marginStart="5dp">

                </TextView>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/price_sum"
                    android:hint="Toplam Tuar: 32,50 ₺"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/btnbuynow"
                    app:layout_constraintEnd_toEndOf="@+id/btnbuynow"
                    app:layout_constraintStart_toStartOf="@+id/btnbuynow"></TextView>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnaddtocart"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    app:cornerRadius="8dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="100dp"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnbuynow"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnbuynow"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="100dp"
                    app:cornerRadius="8dp"
                    android:text="@string/buy_now"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnaddtocart"></com.google.android.material.button.MaterialButton>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        ></androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>